--- a/src/app/views/home/git-hub-repos/git-hub-repos.component.css
+++ b/src/app/views/home/git-hub-repos/git-hub-repos.component.css
@@ -30,14 +30,12 @@
     }
 
     .titulo{
-        display: flex;
-        justify-content: start;
+        display: flex-start;
         align-items: baseline;
     }
 
     .subtitulo{
-        display: flex;
-        justify-content: start;
+        display: flex-start;
         align-items: baseline;
         margin: 0 0 20px 0;
         color: white;
@@ -117,8 +115,7 @@
     }
 
     .subtitulo{
-        display: flex;
-        justify-content: start;
+        display: flex-start;
         align-items: baseline;
         margin: 0 0 20px 0;
         color: white;
