--- a/src/app/views/home/git-hub-repos/git-hub-repos.component.css
+++ b/src/app/views/home/git-hub-repos/git-hub-repos.component.css
@@ -1,6 +1,6 @@
 @media (min-width: 1024px){
 
-    .teste{
+    .botao-link{
         display: flex;
         padding: 10px 2px 10px 2px;
         background-color: #7b1fa2;
@@ -71,7 +71,7 @@
 }
 
 @media (max-width: 1024px){
-    .teste{
+    .botao-link{
         display: flex;
         padding: 10px 2px 10px 2px;
         background-color: #7b1fa2;
